result/0618-180739/stderr.log
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c: In function ‘dimension’:
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:31:5: warning: implicit declaration of function ‘free’ [-Wimplicit-function-declaration]
   31 |     free(pixels);
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:6:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
    5 | #include "utils.h"
  +++ |+#include <stdlib.h>
    6 | 
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:31:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   31 |     free(pixels);
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:31:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c: In function ‘first_pixel’:
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:44:9: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   44 |         free(data);
      |         ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:44:9: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:51:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   51 |     free(data);
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:51:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c: In function ‘tenth_pixel’:
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:64:9: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   64 |         free(data);
      |         ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:64:9: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:69:9: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   69 |         free(data);
      |         ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:69:9: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:77:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   77 |     free(data);
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:77:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c: In function ‘second_line’:
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:95:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   95 |     free(data);
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:95:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c: In function ‘max_pixel’:
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:125:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  125 |     free(data);
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:125:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c: In function ‘min_pixel’:
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:138:19: error: ‘INT_MAX’ undeclared (first use in this function)
  138 |     int min_sum = INT_MAX;
      |                   ^~~~~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:6:1: note: ‘INT_MAX’ is defined in header ‘<limits.h>’; did you forget to ‘#include <limits.h>’?
    5 | #include "utils.h"
  +++ |+#include <limits.h>
    6 | 
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:138:19: note: each undeclared identifier is reported only once for each function it appears in
  138 |     int min_sum = INT_MAX;
      |                   ^~~~~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:153:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
  153 |     free(buf);
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/features.c:153:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/main.c:40:1: error: expected identifier or ‘(’ before ‘else’
   40 | else if (strncmp(configuration.command, "dimension", 9) == 0) {
      | ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/main.c:49:3: error: expected identifier or ‘(’ before ‘}’ token
   49 |   } else if ( strncmp( configuration.command, "first_pixel", 11 ) == 0 ) {
      |   ^
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/main.c:49:5: error: expected identifier or ‘(’ before ‘else’
   49 |   } else if ( strncmp( configuration.command, "first_pixel", 11 ) == 0 ) {
      |     ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/main.c:54:1: error: expected identifier or ‘(’ before ‘}’ token
   54 | } else if ( strncmp( configuration.command, "tenth_pixel", 11 ) == 0 ) {
      | ^
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/main.c:54:3: error: expected identifier or ‘(’ before ‘else’
   54 | } else if ( strncmp( configuration.command, "tenth_pixel", 11 ) == 0 ) {
      |   ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/main.c:58:1: error: expected identifier or ‘(’ before ‘else’
   58 | else if (strncmp(configuration.command, "second_line", 11) == 0) {
      | ^~~~
/home/runner/work/pgi-2025-the_inclusive_radiance/pgi-2025-the_inclusive_radiance/src/main.c:63:1: error: expected identifier or ‘(’ before ‘else’
   63 | else if (strncmp(configuration.command, "max_pixel", 9) == 0) {
      | ^~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2